# techpulse

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  tech_debt.yml
.github/workflows/: backend.yml  compliance.yml  frontend.yml  pr-summary.yml
backend/dbt_project/: dbt_project.yml  profiles.yml
backend/dbt_project/macros/: clean_html.sql
backend/dbt_project/seeds/: tech_taxonomy.csv
backend/dbt_project/tests/: assert_growth_null_first_month.sql  assert_growth_null_zero_denominator.sql  assert_historical_stability_mention_count.sql  assert_no_false_positive_go.sql  assert_no_false_positive_java.sql  assert_positive_match_python_react.sql  assert_recency_previous_month.sql  assert_rust_boundary.sql
backend/tests/: conftest.py  test_api.py  test_data.py
backend/tests/integration/: __init__.py
backend/tests/unit/: __init__.py
docs/: data_collected.md  getting_started.md  manual_test.md
docs/backend/: api.md  dbt_project.md  hn_api_client.md  orchestration.md  overview.md  storage.md
docs/governance/: labels.md
frontend/: .gitignore  CONTRIBUTING.md  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/e2e/: cinema-performance.spec.ts
frontend/eslint-plugins/techpulse/: index.js  no-nested-glass.js
frontend/src/app/: global-error.tsx  globals.css  layout.tsx  not-found.tsx
frontend/src/components/: providers.tsx  query-error-boundary.tsx
frontend/src/hooks/: index.ts  useDashboardParams.test.tsx  useDashboardParams.ts  useDirector.test.ts  useDirector.ts  useMediaQuery.ts  usePrefersReducedMotion.test.ts  usePrefersReducedMotion.ts  useScale.test.ts  useScale.ts  useSceneTimer.test.ts  useSceneTimer.ts  useUrlValidation.test.tsx  useUrlValidation.ts
frontend/src/styles/: colorTokens.test.ts  colorTokens.ts  elevationTokens.test.ts  elevationTokens.ts  glassTokens.test.ts  (+3 more)
tools/compliance/: README.md  config.yaml  scan_content.py  scan_message.py
(+173 files in other folders)
