[project]
name = "techpulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.12.10",
    "dagster-webserver>=1.12.10",
    "dbt-duckdb>=1.10.0",
    "fastapi>=0.128.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/src/techpulse"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]
